[package]
name = "mt"
version = "0.1.2"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
chrono = "0.4"
chrono-tz = "0.10.4"
toml = "0.9.2"
serde = { version = "1.0.219", features = ["derive"] }
dirs = "6.0.0"
toml_edit = "0.23.2"
rand = "0.9.2"
crossterm = "0.29.0"
reqwest = { version = "0.12.1", features = ["blocking"] }
anyhow = "1.0.98"
regex = "1.11.1"
rusqlite = "0.37.0"
